chore: disable mitmachen link for merge into master

--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -38,7 +38,8 @@
         </div>
 
         <div class="rs-nav-impressum">
-            <a id="rs-nav-participate"href="{{ url_for('reisesteine.mitmachen') }}">{{_('Mitmachen')}}</a>
+            <!-- <a id="rs-nav-participate"href="{{ url_for('reisesteine.mitmachen') }}">{{_('Mitmachen')}}</a> -->
+            <a id="rs-nav-participate"href="#">{{_('Mitmachen')}}</a>
             <a id="rs-nav-about"href="{{ url_for('reisesteine.about') }}">{{_('Über Uns')}}</a>
         </div>
     </div>
