feat: add meta descriptions in layout statically and dynamically

--- a/project/blueprints/reisesteine/templates/reisesteine/about.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/about.html
@@ -1,5 +1,9 @@
 {% extends "layouts/base_app.html" %}
 
+{% block metadescription %}
+{{_('Die Idee zur Ausstellung basiert auf dem Projekt «Nowhere – Die Spur der Steine» von Anna Sullivan und wurde von focusTerra weiterentwickelt.')}}
+{% endblock %}
+
 {% block body %}
 <noscript>
     <style>
