--- a/project/blueprints/reisesteine/templates/reisesteine/mitmachen.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/mitmachen.html
@@ -1,5 +1,9 @@
 {% extends "layouts/base.html" %}
 
+{% block metadescription %}
+{{_('Haben Sie auf Ihrer Reisen einen Stein gefunden, den Sie interessant finden oder der Sie einfach an Ihre Reise oder ein Ereignis erinnert? Dann machen Sie mit!')}}
+{% endblock %}
+
 {% block body %}
 
 <div class="container">
