--- a/project/templates/layouts/base_app.html
+++ b/project/templates/layouts/base_app.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="{% block metadescription %}{% endblock %}">
+        <meta id="description" name="description" content="{% block metadescription %}{% endblock %}">
 
         <title>Home - Reisesteine</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
