--- a/project/templates/layouts/base_app.html
+++ b/project/templates/layouts/base_app.html
@@ -4,12 +4,13 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta id="description" name="description" content="{% block metadescription %}{% endblock %}">
+        <meta name="description" content="{% block metadescription %}{% endblock %}">
 
         <title>Home - Reisesteine</title>
+
+        {% block canonical %}{% endblock %}
+
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
-
-
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Passion+One:wght@400;700&family=Sen&display=swap" rel="stylesheet">
         
