--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -8,7 +8,14 @@
     {% endif %}
 {%- endblock %}
 
-
+{% block canonical %}
+    {% if ste %}
+        <link rel="canonical" href="{{ url_for(request.endpoint, _external=True, lang_code='de', **request.view_args) }}" />
+    {% else %}
+        <link rel="alternate" hreflang="de" href="{{ url_for(request.endpoint, _external=True, lang_code='de', **request.view_args) }}" />
+        <link rel="alternate" hreflang="en" href="{{ url_for(request.endpoint, _external=True, lang_code='en', **request.view_args) }}" />
+    {% endif %}
+{% endblock %}
 
 {% block body %}
 <noscript>
