--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -4,9 +4,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="{% block metadescription %}{% endblock %}">
+        <meta id="description" name="description" content="{% block metadescription %}{% endblock %}">
 
         <title>Reisesteine</title>
+
+        {% block canonical %}{% endblock %}
         
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Passion+One:wght@400;700&family=Sen&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"></script>
