--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -20,11 +20,11 @@
 </div>
 
 <div id="rs-nav">
-    <svg class="rs-nav-line" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 761.89 880" preserveAspectRatio="xMidYMid meet" >
+    <svg class="rs-nav-line" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 761.89 777.74">
         <path d="M1.5,35.25s4.37,3.27,12.57,8.17"/>
-        <path d="M22.73,48.35c43.1,23.54,147.75,65.76,276.08,12.38C421.13,9.85,492.41-6.8,559.62,7.32S759.39,79,759.39,189.4,667.83,311.54,592.92,311.54,472.47,384,512.46,426.09C601.25,519.55,645,594.6,595.69,689.51c-23.78,45.78-63.88,68.38-122,76.58"/>
-        <path d="M468.7,766.74q-7.27.91-14.92,1.54"/>
-        <path class="rs-nav-dot" d="M453.52,757a11.28,11.28,0,1,0,12.07,10.43A11.29,11.29,0,0,0,453.52,757Z"/>
+        <path d="M22.73,48.36C65.84,71.9,170.49,114.11,298.81,60.73,421.13,9.85,492.41-6.8,559.62,7.32S759.39,79,759.39,189.4,667.83,311.54,592.92,311.54,472.47,384,512.46,426.09C601.25,519.55,645,594.6,595.69,689.51c-24,46.24-64.69,68.83-123.8,76.82"/>
+        <path d="M466.93,767q-7.28.87-14.93,1.46"/>
+        <path class="rs-nav-dot" d="M451.78,759a9.4,9.4,0,1,0,10.06,8.69A9.4,9.4,0,0,0,451.78,759Z"/>
     </svg>
     <a id="rs-nav-home" class="rs-logo" href="/"><img src="{{ url_for('static', filename='img/logo.svg') }}"/></a>
     <div>
