--- a/project/blueprints/reisesteine/templates/reisesteine/about.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/about.html
@@ -41,7 +41,6 @@
         text-align: center;
     }
 
-
     #rs-about {
         z-index: 3;
         width: 40vw;
@@ -54,6 +53,16 @@
         font-family: 'Sen', sans-serif;
         font-weight: 400;
         font-size: 1.2rem;
+    }
+
+    #rs-about a {
+        text-decoration: none;
+        color: rgb(180, 30, 30);
+    }
+    #rs-about a:hover {
+        text-decoration: none;
+        color: rgb(180, 30, 30);
+        font-weight: 700;
     }
 </style>
 
@@ -74,12 +83,12 @@
         Die Idee zur Ausstellung basiert auf dem Projekt «Nowhere – Die Spur der Steine» von Anna Sullivan und wurde von focusTerra weiterentwickelt. Die Umsetzung erfolgte gemeinsam mit Marion Deichmann und Nicolas Schmid. 
     </p>
     <p>
-        <b>Konzeptentwicklerin, Herausgeberin & Redaktion:</b> focusTerra<br/>
-        <b>Gestaltung & technische Umsetzung:</b> Marion Deichmann und Nicolas Schmid
+        <b>Konzeptentwicklerin, Herausgeberin & Redaktion:</b> <a href="{{ url_for('reisesteine.focusTerra') }}">focusTerra</a><br/>
+        <b>Gestaltung & technische Umsetzung:</b> <a href="{{ url_for('reisesteine.marion') }}">Marion Deichmann</a> und <a href="{{ url_for('reisesteine.nicolas') }}">Nicolas Schmid</a>
     </p>
     <p style="display: flex; margin-top: 50px;">
-    <img src=" {{ url_for('static', filename='img/eth_logo.png') }} " width="300"/>
-    <img src=" {{ url_for('static', filename='img/focusTerra_logo.png') }} " width="300"/>
+    <img src=" {{ url_for('static', filename='img/eth_logo.svg') }} " width="300"/>
+    <img src=" {{ url_for('static', filename='img/focusTerra_logo.svg') }} " width="300"/>
 </p>
 </div>
 <div id="rs-about-impressum">
