--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -68,4 +68,6 @@
     var data_stein = {{ {} if not ste else ste|tojson|safe }};
 
 </script>
+<div id="rs-nav-rock-strings" style="display: none" data-ste="{{_('Stein')}}" data-gesch="{{_('Geschichte')}}" data-fund="{{_('Fundort')}}" data-geo="{{_('Geologie')}}">
+</div>
 {% endblock %}
