--- a/project/blueprints/reisesteine/templates/reisesteine/backend/listSteine.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/backend/listSteine.html
@@ -3,22 +3,22 @@
 {% block body %}
 <div class="container mt-5">
     <div class="card">
-        <h5 class="card-header">Neuer Stein</h5>
+        <h5 class="card-header">{{_('Neuer Stein')}}</h5>
         <div class="card-body">
             <form action="{{ url_for('reisesteine.newStein') }}" method="POST">
                 <div class="form-row align-items-center">
                     <div class="col-sm-3 my-1">
-                        <label class="sr-only" for="inlineFormInputName">Gestein</label>
-                        <input name="gestein" type="text" class="form-control" id="inlineFormInputName" placeholder="Gestein" required>
+                        <label class="sr-only" for="inlineFormInputName">{{_('Gestein')}}</label>
+                        <input name="gestein" type="text" class="form-control" id="inlineFormInputName" placeholder="{{_('Gestein')}}" required>
                     </div>
                     <div class="col-sm-3 my-1">
-                        <label class="sr-only" for="inlineFormInputGroupUsername">Email Einsender</label>
+                        <label class="sr-only" for="inlineFormInputGroupUsername">{{_('Email Einsender')}}</label>
                         <div class="input-group">
-                            <input name="email" type="email" class="form-control" id="inlineFormInputGroupUsername" placeholder="Email Einsender">
+                            <input name="email" type="email" class="form-control" id="inlineFormInputGroupUsername" placeholder="{{_('Email Einsender')}}">
                         </div>
                     </div>
                     <div class="col-auto my-1">
-                        <button type="submit" class="btn btn-primary">Erstellen</button>
+                        <button type="submit" class="btn btn-primary">{{_('Erstellen')}}</button>
                     </div>
                 </div>
             </form>
@@ -31,9 +31,9 @@
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Gestein</th>
-            <th scope="col">Herkunft</th>
-            <th scope="col">Einsender</th>
+            <th scope="col">{{_('Gestein')}}</th>
+            <th scope="col">{{_('Herkunft')}}</th>
+            <th scope="col">{{_('Einsender')}}</th>
             <th scrope="col"></th>
             <th scrope="col"></th>
         </tr>
@@ -47,10 +47,10 @@
             <td>{{stein.herkunft}}</td>
             <td>{{stein.absender}}</td>
             <td>
-                <a href="{{ url_for('reisesteine.editStein', id=stein.id) }}" class="btn btn-primary btn-sm">editiern</a>
+                <a href="{{ url_for('reisesteine.editStein', id=stein.id) }}" class="btn btn-primary btn-sm">{{_('editiern')}}</a>
             </td>
             <td>
-                <a href="{{ url_for('reisesteine.deleteStein', id=stein.id) }}" class="btn btn-danger btn-sm">löschen</a>
+                <a href="{{ url_for('reisesteine.deleteStein', id=stein.id) }}" class="btn btn-danger btn-sm">{{_('löschen')}}</a>
             </td>
         </tr>
         {% endfor %}
