--- a/project/blueprints/reisesteine/templates/reisesteine/about.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/about.html
@@ -80,19 +80,19 @@
         {{_('Werden Sie auch immer wieder von Reiselust gepackt und der Sehnsucht, in die Welt hinauszuziehen? Reisen Sie mit Ihren Steinen ans Ende der Welt oder in Ihren Vorgarten. Die Ausstellung ist eine virtuelle Sammlung Ihrer Lieblingssteine von irgendwo auf der Welt und Ihrer Geschichte, die Sie damit verbinden. Entdecken Sie in der Ausstellung mehr über unsere gemeinsam erstellte Steinsammlung, ihre Fundorte und lernen Sie die damit verbundenen persönlichen und geologischen Geschichten kennen.')}}
     </p>
     <p>
-        {{_('Die Idee zur Ausstellung basiert auf dem Projekt «Nowhere – Die Spur der Steine» von Anna Sullivan und wurde von focusTerra weiterentwickelt. Die Umsetzung erfolgte gemeinsam mit Marion Deichmann und Nicolas Schmid.')}} 
+        {{_('Die Idee zur Ausstellung basiert auf dem Projekt «Nowhere – Die Spur der Steine» von Anna Sullivan und wurde von <i>focus</i>Terra weiterentwickelt. Die Umsetzung erfolgte gemeinsam mit Marion Deichmann und Nicolas Schmid.')}} 
     </p>
     <p>
-        <b>{{_('Konzeptentwicklerin, Herausgeberin & Redaktion:')}}</b> <a href="{{ url_for('reisesteine.focusTerra') }}">focusTerra</a><br/>
+        <b>{{_('Konzeptentwicklerin, Herausgeberin & Redaktion:')}}</b> <a href="{{ url_for('reisesteine.focusTerra') }}"><i>focus</i>Terra</a><br/>
         <b>{{_('Gestaltung & technische Umsetzung:')}}</b> <a href="{{ url_for('reisesteine.marion') }}">Marion Deichmann</a> und <a href="{{ url_for('reisesteine.nicolas') }}">Nicolas Schmid</a>
     </p>
     <p style="display: flex; margin-top: 50px;">
-    <img src=" {{ url_for('static', filename='img/eth_logo.svg') }} " width="300"/>
-    <img src=" {{ url_for('static', filename='img/focusTerra_logo.svg') }} " width="300"/>
+    <a href="https://ethz.ch" target="_blank"><img src=" {{ url_for('static', filename='img/eth_logo.svg') }} " width="300"/></a>
+    <a href="https://focusterra.ethz.ch" target="_blank"><img src=" {{ url_for('static', filename='img/focusTerra_logo.svg') }} " width="300"/></a>
 </p>
 </div>
 <div id="rs-about-impressum">
-    <h2>focusTerra</h2>
+    <h2><i>focus</i>Terra</h2>
     <h3>ETH Zürich</h3>
     <h3>Sonneggstrasse 5</h3>
     <h3>8092 Zürich</h3>
