--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -161,6 +161,11 @@ h4.active {
     height: 100vh;
     width: 100vw;
 }
+
+.rs-content>* {
+    will-change: transform;
+}
+
 .rs-content .rs-coordinates {
     position: absolute;
     top: 20vh;
