--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta id="description" name="description" content="{% block metadescription %}{% endblock %}">
+        <meta name="description" content="{% block metadescription %}{% endblock %}">
 
         <title>Reisesteine</title>
 
